--- a/styles-contact.css
+++ b/styles-contact.css
@@ -73,15 +73,15 @@ html, body {
     width: 600px;
 	padding: 2%;
     margin: 100px auto;
- 	background: rgba(0, 150, 178, .75); /*this uses opacity of 75% for the background color*/
+ 	/*background: rgba(0, 150, 178, .75); /*this uses opacity of 75% for the background color*/
 	text-align: center;
-	border: 4px dashed white;
+	/* border: 4px dashed white;*/
 }
 
    
 #logo {
     margin-bottom: 16px;
-	border: 3px dashed red;
+	/* border: 3px dashed red;*/
 	text-align: center;
 }
 
@@ -123,7 +123,7 @@ nav{
 	width: 400px; /* This is the width of the nav element */
 	margin: 0 auto; /* This centers the entire nav element inside
 	the center div */
-	border: dashed rgb(244, 195, 131);
+	/*border: dashed turquoise;*/
 	border-width: 3px 0; /* This puts a 3 pixel border on top and bottom of the nav element, the zero eliminates the left and right sides of the border */
 	text-align: center;
 	margin-top: 2em; /* This adds a bit of space above the nav element */
