--- a/styles-contact.css
+++ b/styles-contact.css
@@ -73,7 +73,7 @@ html, body {
     width: 600px;
 	padding: 2%;
     margin: 100px auto;
- 	/*background: rgba(0, 150, 178, .75); /*this uses opacity of 75% for the background color*/
+ 	background: rgb(255, 197, 89); /*this uses opacity of 75% for the background color*/
 	text-align: center;
 	/* border: 4px dashed white;*/
 }
@@ -123,7 +123,7 @@ nav{
 	width: 400px; /* This is the width of the nav element */
 	margin: 0 auto; /* This centers the entire nav element inside
 	the center div */
-	/*border: dashed turquoise;*/
+	/*border: dashed rgb(255, 216, 144);*/
 	border-width: 3px 0; /* This puts a 3 pixel border on top and bottom of the nav element, the zero eliminates the left and right sides of the border */
 	text-align: center;
 	margin-top: 2em; /* This adds a bit of space above the nav element */
